fix overflow on channel list

--- a/app/assets/stylesheets/flipside.css.scss
+++ b/app/assets/stylesheets/flipside.css.scss
@@ -91,7 +91,7 @@
     left: 0px;
     right: 60%;
     bottom: 0px;
-    overflow: scroll;
+    overflow-y: scroll;
     
     
     #secondary-menu {
